[package]
name = "imagekit"
version = "0.1.3"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
image = { version = "0.25.6", features = ["webp"] }
rusttype = "0.9"
walkdir = "2.4"
rayon = "1.8"
rust-embed = "8.0"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.8"
